--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
       <version>1.9-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.vexsoftware</groupId>
+      <artifactId>nuvotifier-universal</artifactId>
+      <version>2.3.2.2</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,6 +46,26 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <configuration>
+              <groupId>com.vexsoftware</groupId>
+              <artifactId>nuvotifier-universal</artifactId>
+              <version>2.3.2.2</version>
+              <packaging>jar</packaging>
+              <file>${basedir}/lib/nuvotifier-universal-2.3.2.2.jar</file>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
