--- a/pom.xml
+++ b/pom.xml
@@ -50,26 +50,28 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.4</version>
+        <version>2.5.2</version>
+        <configuration>
+          <groupId>com.vexsoftware</groupId>
+          <artifactId>nuvotifier-universal</artifactId>
+          <version>2.3.2.2</version>
+          <packaging>jar</packaging>
+          <file>${basedir}/lib/nuvotifier-universal-2.3.2.2.jar</file>
+          <generatePom>true</generatePom>
+        </configuration>
         <executions>
           <execution>
-            <phase>initialize</phase>
+            <id>install-jar-lib</id>
             <goals>
               <goal>install-file</goal>
             </goals>
-            <configuration>
-              <groupId>com.vexsoftware</groupId>
-              <artifactId>nuvotifier-universal</artifactId>
-              <version>2.3.2.2</version>
-              <packaging>jar</packaging>
-              <file>${basedir}/lib/nuvotifier-universal-2.3.2.2.jar</file>
-            </configuration>
+            <phase>initialize</phase>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-  
+
   <repositories>
     <repository>
       <id>spigot-repo</id>
