--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 mysql:
   hostname: '127.0.0.1'
   port: '3306'
-  database: 'votesdatabase'
+  database: 'votes'
   username: 'root'
   password: ''
 
