Change depend and database in plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: ${pom.artifactId}
 version: ${pom.version}
-softdepend: [NuVotifier]
+depend: [Votifier]
 description: ${pom.description}
 
 main: net.omniscimus.universalvotes.UniversalVotes
-database: true
+database: false
 
 commands:
    vote:
